# marketplace-alerts

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  config.example.yaml  pyproject.toml
listing_monitor/: __init__.py  cli.py  config.py  filtering.py  http_client.py  models.py  monitor.py  state.py  telegram.py  translation.py  watchdog.py
listing_monitor/marketplaces/: __init__.py  base.py  ebay.py  vinted.py
tests/: test_config.py  test_filtering.py  test_monitor.py  test_parsers.py  test_state.py  test_telegram.py  test_translation.py
