[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-alerts"
version = "0.1.0"
description = "Poll marketplace listings and deliver new matches to Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marketplace Alerts contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "vinted-api-kit>=1.0.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.6,<1",
]

[project.scripts]
marketplace-alerts = "listing_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["listing_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
